--- a/views/recorder.ejs
+++ b/views/recorder.ejs
@@ -22,6 +22,14 @@
     <div>
         <button type="button" onclick="stopRecord()">Finish Recording!</button>
     </div>
+    <div>
+        <h2>Storing user's recording</h2>
+        <button type="button" onclick="uploadFile()">Upload Recording!</button>
+    </div>
+    <div>
+        <h2>Download user's recording</h2>
+        <button type="button" onclick="downloadFile()">Upload Recording!</button>
+    </div>
     <script src="/js/lib/WebAudioRecorder.js"></script>
     <script src="/js/recorder.js"></script>
 </body>
