Added more endpoints and authentication

--- a/views/recorder.ejs
+++ b/views/recorder.ejs
@@ -28,7 +28,7 @@
     </div>
     <div>
         <h2>Download user's recording</h2>
-        <button type="button" onclick="downloadFile()">Upload Recording!</button>
+        <!-- <button type="button" onclick="downloadFile()">Upload Recording!</button> -->
     </div>
     <script src="/js/lib/WebAudioRecorder.js"></script>
     <script src="/js/recorder.js"></script>
