Added quote endpoints and implemented Firebase Cloud Storage

--- a/views/recorder.ejs
+++ b/views/recorder.ejs
@@ -22,14 +22,19 @@
     <div>
         <button type="button" onclick="stopRecord()">Finish Recording!</button>
     </div>
+    <h2>Cancel recording!</h2>
+    <div>
+        <button type="button" onclick="cancelRecord()">Cancel Recording!</button>
+    </div>
     <div>
         <h2>Storing user's recording</h2>
         <button type="button" onclick="uploadFile()">Upload Recording!</button>
     </div>
     <div>
         <h2>Download user's recording</h2>
-        <!-- <button type="button" onclick="downloadFile()">Upload Recording!</button> -->
+        <button type="button" onclick="downloadFile()">Upload Recording!</button>
     </div>
+    <%- include('firebase.ejs') %> 
     <script src="/js/lib/WebAudioRecorder.js"></script>
     <script src="/js/recorder.js"></script>
 </body>
